# plonky2-crypto

./: Cargo.toml  Makefile  README.md
examples/hello-world/: Cargo.toml  README.md
examples/hello-world/src/: hello.rs
src/: lib.rs
src/hash/: merkle_utils.rs  mod.rs  sha256.rs  sha256_merkle.rs  sha256_truncated.rs  sha256_truncated_merkle.rs  types.rs
src/nonnative/gadgets/: biguint.rs
src/u32/gadgets/: arithmetic_u32.rs
src/u32/gates/: add_many_u32.rs  arithmetic_u32.rs  comparison.rs  interleave_u32.rs  mod.rs  range_check_u32.rs  serialization.rs  subtraction_u32.rs  uninterleave_to_b32.rs  uninterleave_to_u32.rs
