[package]
name = "plonky2_crypto"
description = "Crypto gadgets for Plonky2"
version = "0.1.0"
license = "MIT OR Apache-2.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.40", default-features = false }
plonky2 = "0.1.4"
plonky2_maybe_rayon = { version = "0.1" }
itertools = "0.10.5"
num = { version = "0.4.0", default-features = false }
serde = "1.0.152"
serde_with = { version = "2.2.0", features = ["hex"] }
rayon = { version = "1.5.3" }
hex = { version = "0.4.3" }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }

[dev-dependencies]
debug_print = { version = "1.0.0" }
sha2 = { version = "0.10.6" }
sha3 = { version = "0.10.6" }
serde_json = "1.0"
criterion = "0.3"
